@@ -88,7 +88,7 @@ typedef struct {
   off_t            preview_size;
 
   char            *mime_type;
-  
+  const char      *user_agent;
   char            *proto;
   char            *user;
   char            *password;
@@ -644,7 +644,8 @@ static int http_plugin_open (input_plugin_t *this_gen ) {
   use_proxy = this_class->proxyhost && strlen(this_class->proxyhost);
   
   if (!_x_parse_url(this->mrl, &this->proto, &this->host, &this->port,
-                    &this->user, &this->password, &this->uri)) {
+                    &this->user, &this->password, &this->uri,
+                    &this->user_agent)) {
     _x_message(this->stream, XINE_MSG_GENERAL_WARNING, "malformed url", NULL);
     return 0;
   }
@@ -749,10 +750,12 @@ static int http_plugin_open (input_plugin_t *this_gen ) {
   }
   
   snprintf(this->buf + buflen, BUFSIZE - buflen,
-           "User-Agent: xine/%s\015\012"
+           "User-Agent: %s%sxine/%s\015\012"
            "Accept: */*\015\012"
            "Icy-MetaData: 1\015\012"
            "\015\012",
+           this->user_agent ? this->user_agent : "",
+           this->user_agent ? " " : "",
            VERSION);
   buflen = strlen(this->buf);
   if (_x_io_tcp_write (this->stream, this->fh, this->buf, buflen) != buflen) {
@@ -1003,7 +1006,8 @@ static input_plugin_t *http_class_get_instance (input_class_t *cls_gen, xine_str
   
   if (strncasecmp (mrl, "http://", 7) && 
       strncasecmp (mrl, "unsv://", 7) &&
-      strncasecmp (mrl, "peercast://pls/", 15)) {
+      strncasecmp (mrl, "peercast://pls/", 15) &&
+      !_x_url_user_agent (mrl) /* user agent hacks */) {
     return NULL;
   }
   this = calloc(1, sizeof(http_input_plugin_t));
