@@ -86,6 +86,8 @@ xine-lib (1.1.17) 2009-??-??
   * Ported to new libmpcdec API (retaining build compat. with the old API).
   * Cope with CDDB return code 211 (multiple entries).
   * Allow reading of non-block-sized chunks from audio CDs.
+  * Add a user agent & protocol hack ("qthttp://...") to allow direct
+    viewing of Apple film trailers.
 
 xine-lib (1.1.16.3) 2009-04-03
   * Security fixes:
